@@ -1,3 +1,9 @@
+2015-02-11 Ben Shi <powerstudio1st AT 163 DOT com>
+	* src/SDCCglue.c:
+	  Improve pointer initialization.
+	* support/regression/tests/bug-2123.c:
+	  Add a new test case for bug #2123.
+
 2015-02-08 Ben Shi <powerstudio1st AT 163 DOT com>
 	* src/SDCCval.c:
 	  Allow type cast in function pointer initialization.
